# cobotta2_client

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.run/: server1_ctrl.run.xml  server2_ctrl.run.xml
fastapi/: Pro1.pcs  README.md  test_fastapi_Async_COBOTTA2_Reset_error.py  test_fastapi_Async_COBOTTA2_busy_status.py  test_fastapi_Async_COBOTTA2_current_angle.py  test_fastapi_Async_COBOTTA2_get_P.py  test_fastapi_Async_COBOTTA2_get_current_error_info.py  test_fastapi_Async_COBOTTA2_move0_P40+offset.py  test_fastapi_Async_COBOTTA2_move0_P40.py  test_fastapi_Async_COBOTTA2_move0_P41.py  test_fastapi_Async_COBOTTA2_move0_P42.py  test_fastapi_Async_COBOTTA2_move0_P43.py  test_fastapi_Async_COBOTTA2_save_Pxx-Pxx_to_File.py  test_fastapi_Async_LOOP_busy_status.py  test_fastapi_Async_LOOP_client.py  test_fastapi_Async_LOOP_current_angle.py  test_fastapi_Async_LOOP_test_1_2.py  test_fastapi_Async_Reset_error.py  test_fastapi_Async_STATE_busy_status.py  test_fastapi_Async_busy_status.py  test_fastapi_Async_current_angle.py  test_fastapi_Async_current_position.py  test_fastapi_Async_get_P1.py  test_fastapi_Async_get_P2.py  test_fastapi_Async_get_bstrOpt.py  test_fastapi_Async_get_cored_type.py  test_fastapi_Async_get_current_error_info.py  test_fastapi_Async_get_current_position.py  test_fastapi_Async_get_extspeed.py  test_fastapi_Async_get_jspeed.py  test_fastapi_Async_get_speed.py  test_fastapi_Async_hand_move_A_10.py  test_fastapi_Async_hand_move_A_30.py  test_fastapi_Async_move0_P2+offset.py  test_fastapi_Async_move0_P2.py  (+18 more)
(+187 files in other folders)
